tests/aster/x/zig/sort_stable.zig.out
sort_stable.zig:8:19: error: unable to infer array size
